# flowl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.jules/: bolt.md
src/: app.py  main.py  temp.py
src/audio/: __init__.py  buffer.py  callback.py  device_manager.py  engine.py  queues.py  threads.py  workers.py
src/models/: __init__.py  bundle.py  punctuation.py
src/ui/: __init__.py  logger.py  mainui.py  settings_tab.py  testui.py
src/ui/components/: control_bar.py  overlay_window.py  subtitle_display.py
src/utils/: __init__.py  device_manager.py  logger.py  models.py  settings.py  utils.py
tests/: test_logic.py  test_settings.py
